--- a/CourseManagement/Views/Shared/_Layout.cshtml
+++ b/CourseManagement/Views/Shared/_Layout.cshtml
@@ -29,11 +29,6 @@
 
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" onclick="editUser()">
-                            <i class="fas fa-user-edit"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Logout", WebConstants.CONTROLLER_INDEX)" role="button" title="Đăng xuất">
                             <i class="fas fa-sign-out-alt"></i>
                         </a>
@@ -79,7 +74,7 @@
     <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../plugins/select2/js/select2.full.min.js"></script>
     <script src="../../dist/js/adminlte.min.js"></script>
-    <script src="../../plugins/moment/moment.min.js"></script>
+    <script src="../../plugins/moment/moment-with-locales.min.js"></script>
     <script src="../../plugins/inputmask/jquery.inputmask.min.js"></script>
     <script src="../../plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <script src="../../plugins/toastr/toastr.min.js"></script>
@@ -92,8 +87,10 @@
             $('.select2').select2();
 
             // Date picker
+            moment.locale('vi');
             $('.date').datetimepicker({
-                format: 'DD/MM/YYYY'
+                format: 'DD/MM/YYYY',
+                locale: 'vi',
             });
         });
     </script>
