--- a/CourseManagement/Views/Users/_Register.cshtml
+++ b/CourseManagement/Views/Users/_Register.cshtml
@@ -94,7 +94,7 @@
                     }
                     <div class="row">
                         <div class="col-md-12">
-                            <label>Lần thay đổi cuối cùng: </label> <span>@Model.LastChanged</span>
+                            <label>Lần cuối thay đổi: </label> <span>@Model.LastChanged</span>
                         </div>
                     </div>
                 }
