--- a/CourseManagement/Views/Shared/_SmallLayout.cshtml
+++ b/CourseManagement/Views/Shared/_SmallLayout.cshtml
@@ -1,10 +1,9 @@
-﻿@using CourseManagement.Constants
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Quản lý Kho | @ViewData["Title"]</title>
+        <title>Quản lý Khóa học | @ViewData["Title"]</title>
         <!-- Google Font: Source Sans Pro -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
         <!-- Font Awesome -->
@@ -13,7 +12,7 @@
         <link rel="stylesheet" href="../../plugins/icheck-bootstrap/icheck-bootstrap.min.css">
         <!-- Theme style -->
         <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
-        <link rel="stylesheet" href="../../css/site.css?v=@(ConfigConstants.CLIENT_VERSION)">
+        <link rel="stylesheet" href="../../css/site.css?v=@(WebConstants.CLIENT_VERSION)">
         <!-- Shortcut icon -->
         <link rel="shortcut icon" href="../../dist/img/shortcut-icon.png" />
     </head>
@@ -24,7 +23,7 @@
     <script src="../../plugins/jquery/jquery.min.js"></script>
     <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../dist/js/adminlte.min.js"></script>
-    <script src="../../js/site.js?v=@(ConfigConstants.CLIENT_VERSION)"></script>
+    <script src="../../js/site.js?v=@(WebConstants.CLIENT_VERSION)"></script>
 
     @RenderSection("scripts", required: false)
 </html>
