--- a/CourseManagement/Views/Home/Index.cshtml
+++ b/CourseManagement/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using CourseManagement.Helpers
+@{
     ViewData["Title"] = "Trang chủ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -20,8 +21,9 @@
     <div class="row">
         <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box mb-3">
-                <span class="info-box-icon bg-danger elevation-1"><i class="fas fa-calendar-alt"></i></span>
-
+                <span class="info-box-icon bg-danger elevation-1">
+                    <i class="fas fa-calendar-alt"></i>
+                </span>
                 <div class="info-box-content">
                     <span class="info-box-text">Khóa học</span>
                     <span class="info-box-number">@Model.TotalCourses</span>
@@ -31,8 +33,9 @@
         <div class="clearfix hidden-md-up"></div>
         <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box mb-3">
-                <span class="info-box-icon bg-warning elevation-1"><i class="fas fa-users"></i></span>
-
+                <span class="info-box-icon bg-warning elevation-1">
+                    <i class="fas fa-users"></i>
+                </span>
                 <div class="info-box-content">
                     <span class="info-box-text">Thành viên</span>
                     <span class="info-box-number">@Model.TotalUsers</span>
@@ -42,10 +45,68 @@
     </div>
     <div class="row">
         <div class="col-md-8">
-            <partial name="_LatestCourses" model="@Model.LatestCourses" />
+            <div class="card">
+                <div class="card-header border-transparent">
+                    <h3 class="card-title">Khóa học mới nhất</h3>
+                </div>
+                <div class="card-body p-0">
+                    <div class="table-responsive">
+                        <table class="table m-0">
+                            <thead>
+                                <tr>
+                                    <th>Mã khóa học</th>
+                                    <th>Tên khóa học</th>
+                                    <th>Thời gian</th>
+                                    <th>Trạng thái</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model.LatestCourses.Length > 0) foreach (var result in Model.LatestCourses)
+                                {
+                                    <tr>
+                                        <td>@result.CourseCode</td>
+                                        <td>@result.CourseName</td>
+                                        <td>
+                                            @($"{result.Duration}(H) {result.StartDate.ToString(WebConstants.DATE_FORMAT_VN)} ~ {result.EndDate.ToString(WebConstants.DATE_FORMAT_VN)}")
+                                        </td>
+                                        <td>
+                                            <span class="badge badge-@((result.Status == 1) ? "primary" : "warning")">
+                                                @ValueTextHelper.GetStatusText(result.Status.ToString())
+                                            </span>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="card-footer clearfix">
+                    <a href="@WebConstants.PAGE_COURSES_REGISTER" class="btn btn-sm btn-info float-left">Tạo mới</a>
+                    <a href="@WebConstants.PAGE_COURSES_LIST" class="btn btn-sm btn-secondary float-right">Xem tất cả</a>
+                </div>
+            </div>
         </div>
         <div class="col-md-4">
-            <partial name="_LatestUsers" model="@Model.LatestUsers" />
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">Thành viên mới nhất</h3>
+                </div>
+                <div class="card-body p-0">
+                    <ul class="users-list clearfix">
+                        @if (Model.LatestUsers.Length > 0) foreach (var result in Model.LatestUsers)
+                        {
+                            <li>
+                                <img src="dist/img/user1-128x128.jpg" alt="User Image" />
+                                <a class="users-list-name" href="#">@result.UserName</a>
+                                <span class="users-list-date">@result.CreatedAt</span>
+                            </li>
+                        }
+                    </ul>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="@WebConstants.PAGE_USERS_LIST">Xem tất cả</a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
