--- a/CourseManagement/Views/Users/_ChangePassword.cshtml
+++ b/CourseManagement/Views/Users/_ChangePassword.cshtml
@@ -13,16 +13,12 @@
             <div class="modal-body">
                 <form id="frmChangePassword">
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.Password, "Mật khẩu", new { @class = "required" })
-                        @Html.TextBoxFor(
-                            model => model.Password,
-                            new { @class = "form-control form-control-md", @type = "password", @maxlength = 30, @autocomplete = "off" })
+                        <label asp-for="Password" class="required">Mật khẩu</label>
+                        <input asp-for="Password" type="password" autocomplete="off" class="form-control form-control-md" maxlength="20" />
                     </div>
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.ConfirmPassword, "Mật khẩu (xác nhận)", new { @class = "required" })
-                        @Html.TextBoxFor(
-                            model => model.ConfirmPassword,
-                            new { @class = "form-control form-control-md", @type = "password", @maxlength = 30, @autocomplete = "off" })
+                        <label asp-for="Password" class="required">Mật khẩu (xác nhận)</label>
+                        <input asp-for="ConfirmPassword" type="password" autocomplete="off" class="form-control form-control-md" maxlength="20" />
                     </div>
                     <div class="form-group row">
                         <div class="form-group">
